# Renderer

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.c  main.cpp
